fix: deleted visible from Modal

--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -1,14 +1,3 @@
-.wrap {
-  visibility: hidden;
-  opacity: 0;
-  transition: all .5s ease;
-}
-
-.visible {
-  visibility: visible;
-  opacity: 1;
-}
-
 .modal {
   position: fixed;
   top: 50%;
